--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
 <body class="body">
   <header class="header">
     <a class="header__main-nav" href="#">
-      <img class="logo" src="img/logo.svg" width="185" height="96" alt="Логотип."></img>
+      <img class="logo" src="img/logo.svg" width="185" height="96" alt="Логотип.">
     </a>
     <nav class="nav">
       <div class="main-nav__wrapper">
@@ -38,17 +38,17 @@
         </ul>
         <!-- Меню для мобильной версии
         <div clas="nav__list user-list">
-          <img class="user-list__menu" src="../source/img/icon-menu.svg" alt="Открыть меню" href="#">
+          <img class="user-list__menu" src="../source/img/icon-menu.svg" alt="Открыть меню." href="#">
         </div>
       -->
       </div>
     </nav>
   </header>
   <main class="content">
-    <div class="content__intro intro">
-      <img class="intro-background" src="../source/img/intro-background.svg" alt="Фото каньона на заднем плане.">
-      <img class="intro-background-name" src="../source/img/intro-background-name.svg" alt="Надпись Седона">
-      <img class="intro-triangle" src="../source/img/intro-triangle.svg" alt=".">
+    <div class="content__intro-index intro">
+      <img class="content__intro-img-background" src="../source/img/index-intro-background.svg"
+        alt="Welcome yo the gergeous. Sedona. Because the Gtand Canyon sucks!">
+      <img class="content__intro-triangle" src="../source/img/intro-triangle.svg" alt=".">
     </div>
     <div class="content__title">
       <h1 class="content__title content-head">Фото и видео</h1>
@@ -83,14 +83,15 @@
       <h3 class="card-total-likes">254</h3>
     </div>
     <div class="content__video catalog-video">
-      <h2 class="catalog-video-title"></h2>
+      <h2 class="catalog-video-title">Все еще сомневаетесь?</h2>
       <h3 class="catalog-video-description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
         очередной раз!</h3>
       <img class="video-player" src="../source/img/video-mobile.svg" alt="Видеоплеер.">
       <img class="video-player-polugon" src="../source/img/polygon.svg" alt="Запустить плеер.">
     </div>
-    <div class="main__map">
-      <img class="main-map-img" src="../source/img/map-mobile.svg" alt="Карта.">
+    <div class="map">
+      <img class="map__image" src="../source/img/map-mobile.svg" alt="Карта.">
+      <img class="map__marker" src="../source/img/map-marker.svg" alt="Маркер на карте.">
     </div>
   </main>
   <footer class="footer">
@@ -134,10 +135,11 @@
         </a>
       </li>
     </ul>
-    <a class="footer__academy-logo">Разработано</a>
-    <img class="footer__academy-logo" href="https://htmlacademy.ru/" src="../source/img/htmlacademy.svg"
-      alt="Логотип Академии" width="26.9" height="34.1">
+    <a class="footer__academy-logo" href="https://htmlacademy.ru/">Разработано</a>
+    <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo" src="../source/img/htmlacademy.svg"
+      alt="Логотип Академии" width="27" height="34"><span class="visually-hidden">Логотип академии</span></a>
   </footer>
 </body>
 
 </html>
+
