--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,7 @@
         </ul>
         <!-- Меню для мобильной версии
         <div clas="nav__list user-list">
-          <img class="user-list__menu" src="../source/img/icon-menu.svg" alt="Открыть меню" href="#">
+          <img class="user-list__menu" src="../source/img/icon-menu.svg" alt="Открыть меню." href="#">
         </div>
       -->
       </div>
@@ -47,10 +47,8 @@
   <main class="content">
     <div class="content__intro-index intro">
       <img class="content__intro-img-background" src="../source/img/index-intro-background.svg"
-        alt="фото Седоны на заднем фоне.">
-      <img class="content__intro-text" src="../source/img/text-index.svg"
         alt="Welcome yo the gergeous. Sedona. Because the Gtand Canyon sucks!">
-      <img class="content__intro-triangle" src="../source/img/index-intro-triangle.svg" alt=".">
+      <img class="content__intro-triangle" src="../source/img/intro-triangle.svg" alt=".">
     </div>
     <div class="advantages">
       <div class="advantages__title theme-light">
@@ -100,14 +98,15 @@
         <h4 class="advantages-list-description">Большинство едет в Гранд Каньон и толпится там</h4>
       </div>
     </div>
-    <div class="main__wonder">
-      <h2 class="main__wonder-title">Заинтерисовались?</h2>
-      <h3 class="main__wonder-description">Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения
+    <div class="wonder">
+      <h2 class="wonder__title">Заинтерисовались?</h2>
+      <h3 class="wonder__description">Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения
         гостиниц в Седоне</h3>
       <button class="main__wonder-button" type="button" value="Найти гостиницу.">Найти гостиницу</button>
     </div>
-    <div class="main__map">
-      <img class="main-map-img" src="../source/img/map-mobile.svg" alt="Карта.">
+    <div class="map">
+      <img class="map__image" src="../source/img/map-mobile.svg" alt="Карта.">
+      <img class="map__marker" src="../source/img/map-marker.svg" alt="Маркер на карте.">
     </div>
 
   </main>
@@ -152,9 +151,9 @@
         </a>
       </li>
     </ul>
-    <a class="footer__academy-logo">Разработано</a>
-    <img class="footer__academy-logo" href="https://htmlacademy.ru" src="../source/img/htmlacademy.svg"
-      alt="Логотип Академии" width="27" height="34">
+    <a class="footer__academy-logo" href="https://htmlacademy.ru/">Разработано</a>
+    <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo" src="../source/img/htmlacademy.svg"
+      alt="Логотип Академии" width="27" height="34"><span class="visually-hidden">Логотип академии</span></a>
   </footer>
 
 </body>
