Добавлены изображения. Исправлен валидатор

--- a/source/form.html
+++ b/source/form.html
@@ -77,19 +77,19 @@
       <h2 class="content-rating-title">Ваше общее впечатление</h2>
       <input class="content-rating-radio" type="radio" id="content-rating-radio-positive" value="Скорее положительное"
         checked><label for="content-rating-radio-positive">Скорее положительное</label>
-      <input class="content-rating-radio" type="radio" id="content-rating-radio-negative" value="Скорее отрицательное"><label
-        for="content-rating-radio-negative">Скорее отрицательное</label>
-      <input class="content-rating-radio" type="radio" id="content-rating-radio-none" value="Затрудняюсь ответить"><label
-        for="content-rating-radio-none">Затрудняюсь ответить</label>
+      <input class="content-rating-radio" type="radio" id="content-rating-radio-negative"
+        value="Скорее отрицательное"><label for="content-rating-radio-negative">Скорее отрицательное</label>
+      <input class="content-rating-radio" type="radio" id="content-rating-radio-none"
+        value="Затрудняюсь ответить"><label for="content-rating-radio-none">Затрудняюсь ответить</label>
     </div>
     <div class="content__attraction content-attraction">
       <h2 class="content-attraction-title">Посещенные достопримечательности:</h2>
       <div class="content-attraction-check"><span class="visually-hidden">Выбор посещенных
           достопримечательностей.</span>
-        <input class="content-attraction-checkbox" type="checkbox" id="content-attraction-checkbox-1" value="Мост Дьявола"
-          checked><label for="content-attraction-checkbox-1">Мост Дьявола</label>
-        <input class="content-attraction-checkbox" type="checkbox" id="content-attraction-checkbox-2" value="Гора-Колокол"
-          checked><label for="content-attraction-checkbox-2">Гора-Колокол</label>
+        <input class="content-attraction-checkbox" type="checkbox" id="content-attraction-checkbox-1"
+          value="Мост Дьявола" checked><label for="content-attraction-checkbox-1">Мост Дьявола</label>
+        <input class="content-attraction-checkbox" type="checkbox" id="content-attraction-checkbox-2"
+          value="Гора-Колокол" checked><label for="content-attraction-checkbox-2">Гора-Колокол</label>
         <input class="content-attraction-checkbox" type="checkbox" id="content-attraction-checkbox-3" value="Слайд-парк"
           checked><label for="content-attraction-checkbox-3">Слайд парк</label>
         <input class="content-attraction-checkbox" type="checkbox" id="content-attraction-checkbox-4"
@@ -145,21 +145,22 @@
       </li>
     </ul>
     <a class="footer__academy-logo" href="https://htmlacademy.ru/">Разработано</a>
-    <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo" src="../source/img/htmlacademy.svg"
-      alt="Логотип Академии" width="27" height="34"><span class="visually-hidden">Логотип академии</span></a>
+    <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo"
+        src="../source/img/htmlacademy.svg" alt="Логотип Академии" width="27" height="34"><span
+        class="visually-hidden">Логотип академии</span></a>
   </footer>
 
-<div class="modal__error modal-error modal">
-  <h2 class="modal-error-title">Что-то пошло не так!</h2>
-  <h3 class="modal-error-description">Проверьте поля, выделенные красным, скорее всего Вы забыли их заполнить</h3>
-  <button class="modal-error-button" type="button" value="Ок.">Ок</button>
-</div>
-<div class="modal__success modal-success modal">
-  <h2 class="modal-success-title">Ваш отзыв отправлен!</h2>
-  <h3 class="modal-success-description">Спасибо за Ваше участие, Ваш отзыв уже поступил к нам. В ближайщее время мы
-    опубликуем его на сайте.</h3>
-  <button class="modal-success-button" type="button" value="Закрыть окно.">Закрыть окно</button>
-</div>
+  <div class="modal__error modal-error modal">
+    <h2 class="modal-error-title">Что-то пошло не так!</h2>
+    <h3 class="modal-error-description">Проверьте поля, выделенные красным, скорее всего Вы забыли их заполнить</h3>
+    <button class="modal-error-button" type="button" value="Ок.">Ок</button>
+  </div>
+  <div class="modal__success modal-success modal">
+    <h2 class="modal-success-title">Ваш отзыв отправлен!</h2>
+    <h3 class="modal-success-description">Спасибо за Ваше участие, Ваш отзыв уже поступил к нам. В ближайщее время мы
+      опубликуем его на сайте.</h3>
+    <button class="modal-success-button" type="button" value="Закрыть окно.">Закрыть окно</button>
+  </div>
 
 </body>
 
