--- a/source/index.html
+++ b/source/index.html
@@ -152,8 +152,9 @@
       </li>
     </ul>
     <a class="footer__academy-logo" href="https://htmlacademy.ru/">Разработано</a>
-    <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo" src="../source/img/htmlacademy.svg"
-      alt="Логотип Академии" width="27" height="34"><span class="visually-hidden">Логотип академии</span></a>
+    <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo"
+        src="../source/img/htmlacademy.svg" alt="Логотип Академии" width="27" height="34"><span
+        class="visually-hidden">Логотип академии</span></a>
   </footer>
 
 </body>
