--- a/source/index.html
+++ b/source/index.html
@@ -9,51 +9,48 @@
 
 <body class="body">
   <header class="header">
-    <a class="header__main-nav" href="#">
+    <a class="header__logo" href="#">
       <img class="logo" src="img/logo.svg" width="185" height="96" alt="Логотип.">
     </a>
     <nav class="nav">
-      <div class="main-nav__wrapper">
+      <div class="nav__wrapper">
         <ul class="nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a href="#">
+          <li class="site-list__item site-list__item__active">
+            <a class="site-list__link" href="#">
               Главная
             </a>
           </li>
           <li class="site-list__item">
-            <a href="#">
+            <a class="site-list__link" href="#">
               Фото и видео
             </a>
           </li>
           <li class="site-list__item">
-            <a href="#">
+            <a class="site-list__link" href="#">
               Форма отзыва
             </a>
           </li>
           <li class="site-list__item">
-            <a href="#">
+            <a class="site-list__link" href="#">
               HTML ACADEMY
             </a>
           </li>
         </ul>
-        <!-- Меню для мобильной версии
-        <div clas="nav__list user-list">
-          <img class="user-list__menu" src="../source/img/icon-menu.svg" alt="Открыть меню." href="#">
-        </div>
-      -->
+        <button class="header__toggle toggle">
+          <img class="toggle__menu" src="../source/img/icon-menu.svg" alt="Открыть меню." href="#">
+        </button>
       </div>
     </nav>
   </header>
   <main class="content">
     <div class="content__intro-index intro">
-      <img class="content__intro-img-background" src="../source/img/index-intro-background.svg"
+      <img class="intro__img" src="../source/img/index-intro-background.svg"
         alt="Welcome yo the gergeous. Sedona. Because the Gtand Canyon sucks!">
-      <img class="content__intro-triangle" src="../source/img/intro-triangle.svg" alt=".">
     </div>
     <div class="advantages">
       <div class="advantages__title theme-light">
-        <h1 class="advantages__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-        <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <h1 class="advantages__head main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="advantages__description main-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </div>
       <div class="advantages__item advantages-item theme-dark">
         <h2 class="advantages-item-title">Настоящий городок</h2>
@@ -90,7 +87,7 @@
       <div class="advantages__list advantages-list theme-modified">
         <h2 class="advantages-list-title">Красивая дорога</h2>
         <h3 class="advantages-list-sub">— №4 —</h3>
-        <h4 class="advantages-list-description">Ехать в Седонуиз Лас-Вегаса совсем не скучно!</h4>
+        <h4 class="advantages-list-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</h4>
       </div>
       <div class="advantages__list advantages-list theme-modified">
         <h2 class="advantages-list-title">Мало туристов</h2>
@@ -102,7 +99,7 @@
       <h2 class="wonder__title">Заинтерисовались?</h2>
       <h3 class="wonder__description">Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения
         гостиниц в Седоне</h3>
-      <button class="main__wonder-button" type="button" value="Найти гостиницу.">Найти гостиницу</button>
+      <button class="wonder__button button" type="button" value="Найти гостиницу.">Найти гостиницу</button>
     </div>
     <div class="map">
       <img class="map__image" src="../source/img/map-mobile.svg" alt="Карта.">
@@ -111,10 +108,10 @@
 
   </main>
   <footer class="footer">
-    <h2 class="footer__title">#visitSEDONA</h2>
-    <ul class="footer__socials footer-socials">
-      <li class="footer-socials-item"><a class="socials-link" href="#"><span class="visually-hidden">VKontakte</span>
-          <svg class="socials-img" width="48" height="48" viewBox="0 0 48 48" fill="none"
+    <span class="footer__title">#visitSEDONA</span>
+    <ul class="footer__socials socials">
+      <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">VKontakte</span>
+          <svg class="socials__img" width="48" height="48" viewBox="0 0 48 48" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <rect width="48" height="48" fill="#81B3D2" />
             <g clip-path="url(#clip0_38006_456)">
@@ -130,8 +127,8 @@
           </svg>
         </a>
       </li>
-      <li class="footer-socials-item"><a class="socials-link" href="#"><span class="visually-hidden">Telegram</span>
-          <svg class="socials-img" width="48" height="48" viewBox="0 0 48 48" fill="none"
+      <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">Telegram</span>
+          <svg class="socials__img" width="48" height="48" viewBox="0 0 48 48" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <rect width="48" height="48" fill="#81B3D2" />
             <path
@@ -140,8 +137,8 @@
           </svg>
         </a>
       </li>
-      <li class="footer-socials-item"><a class="socials-link" href="#"><span class="visually-hidden">YouTube</span>
-          <svg class="socials-img" width="48" height="48" viewBox="0 0 48 48" fill="none"
+      <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">YouTube</span>
+          <svg class="socials__img" width="48" height="48" viewBox="0 0 48 48" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <rect width="48" height="48" fill="#81B3D2" />
             <path
