--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../source/css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <title>HTML Academy: Седона</title>
 </head>
 
@@ -26,7 +26,7 @@
             </a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">
+            <a class="site-list__link" href="form.html">
               Форма отзыва
             </a>
           </li>
@@ -37,61 +37,61 @@
           </li>
         </ul>
         <button class="header__toggle toggle">
-          <img class="toggle__menu" src="../source/img/icon-menu.svg" alt="Открыть меню." href="#">
+          <img class="toggle__menu" src="img/icon-menu.svg" alt="Открыть меню." href="#">
         </button>
       </div>
     </nav>
   </header>
   <main class="content">
     <div class="content__intro-index intro intro--page-inner">
-      <img class="intro__img" src="../source/img/index-intro-background.svg"
+      <img class="intro__img" src="img/index-intro-background.svg"
         alt="Welcome yo the gergeous. Sedona. Because the Gtand Canyon sucks!">
     </div>
     <div class="content__title">
       <h1 class="content__title-head content-head">Фото и видео</h1>
-      <h2 class="content-head-sub">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам
+      <h2 class="content-head__sub">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам
         забыть о политике и экономике.</h2>
     </div>
     <div class="content__card card">
-      <img class="card__image" src="../source/img/card-1-mobile.svg"
-        alt="Народные просторы. Дорога, уходящая в закат.">>
+      <img class="card__image" src="img/card-1-mobile.svg"
+        alt="Народные просторы. Дорога, уходящая в закат.">
       <h2 class="card__content">Автор фото: Борис</h2>
-      <img class="card__likes-img" src="../source/img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+      <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
       <h3 class="card__total-likes">1350</h3>
     </div>
     <div class="content__card card">
-      <img class="card__image" src="../source/img/card-2-mobile.svg"
+      <img class="card__image" src="img/card-2-mobile.svg"
         alt="Местная растительность. Кактус на фоне каньона.">
       <h2 class="card__content">Автор фото: Сергей</h2>
-      <img class="card__likes-img" src="../source/img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+      <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
       <h3 class="card__total-likes">143</h3>
     </div>
     <div class="content__card card">
-      <img class="card__image" src="../source/img/card-3-mobile.svg"
+      <img class="card__image" src="img/card-3-mobile.svg"
         alt="Дорога на север. Серпантиновая дорога среди горного леса.">
       <h2 class="card__content">Автор фото: Петр</h2>
-      <img class="card__likes-img" src="../source/img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+      <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
       <h3 class="card__total-likes">96</h3>
     </div>
     <div class="content__card card">
-      <img class="card__image" src="../source/img/card-4-mobile.svg" alt="Мост Дьявола. Фото каньона и простор.">
+      <img class="card__image" src="img/card-4-mobile.svg" alt="Мост Дьявола. Фото каньона и простор.">
       <h2 class="card__content">Автор фото: Антон</h2>
-      <img class="card__likes-img" src="../source/img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+      <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
       <h3 class="card__total-likes">254</h3>
     </div>
     <div class="content__video video">
       <h2 class="video__title">Все еще сомневаетесь?</h2>
       <h3 class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
         очередной раз!</h3>
-      <img class="video-player" src="../source/img/video-mobile.svg" alt="Видеоплеер.">
-      <img class="video-player-polygon" src="../source/img/polygon.svg" alt="Запустить плеер.">
+      <img class="video-player" src="/img/video-mobile.svg" alt="Видеоплеер.">
+      <img class="video-player__polygon" src="/img/polygon.svg" alt="Запустить плеер.">
     </div>
     <div class="map">
-      <img class="map__image" src="../source/img/map-mobile.svg" alt="Карта.">
-      <img class="map__marker" src="../source/img/map-marker.svg" alt="Маркер на карте.">
+      <img class="map__image" src="/img/map-mobile.svg" alt="Карта.">
+      <img class="map__marker" src="/img/map-marker.svg" alt="Маркер на карте.">
     </div>
   </main>
-  <footer class="footer">
+  <footer class="footer theme-light">
     <span class="footer__title">#visitSEDONA</span>
     <ul class="footer__socials socials">
       <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">VKontakte</span>
@@ -134,7 +134,7 @@
     </ul>
     <a class="footer__academy-logo" href="https://htmlacademy.ru/">Разработано</a>
     <a class="footer__academy-logo-url" href="https://htmlacademy.ru/"><img class="footer__academy-logo"
-        src="../source/img/htmlacademy.svg" alt="Логотип Академии" width="27" height="34"><span
+        src="img/htmlacademy.svg" alt="Логотип Академии" width="27" height="34"><span
         class="visually-hidden">Логотип академии</span></a>
   </footer>
 </body>
