Исправления по стилизации

--- a/source/form.html
+++ b/source/form.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="/css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./css/style.css" />
   <title>HTML Academy: Седона</title>
 </head>
 
@@ -154,11 +155,11 @@
       <h3 class="modal-error__description">Проверьте поля, выделенные красным, скорее всего Вы забыли их заполнить</h3>
       <button class="modal-error__button button" type="button" value="Ок.">Ок</button>
     </div>
-    <div class="modal__success modal-success">
-      <h2 class="modal-success__title">Ваш отзыв отправлен!</h2>
-      <h3 class="modal-success__description">Спасибо за Ваше участие, Ваш отзыв уже поступил к нам. В ближайшее время мы
+    <div class="modal__succsess modal-success">
+      <h2 class="modal-succsess__title">Ваш отзыв отправлен!</h2>
+      <h3 class="modal-succsess__description">Спасибо за Ваше участие, Ваш отзыв уже поступил к нам. В ближайшее время мы
         опубликуем его на сайте.</h3>
-      <button class="modal-success__button button" type="button" value="Закрыть окно.">Закрыть окно</button>
+      <button class="modal-succsess__button button" type="button" value="Закрыть окно.">Закрыть окно</button>
     </div>
   </div>
 
